Signed-off-by: SteveWoodis <tswoodis@msn.com>

--- a/Project 1 Landing Page.html
+++ b/Project 1 Landing Page.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-		<title>Woody's Whiz Bang Search Tool</title>
+		<title>Woody's Whiz Bang Search Tool for Project 1 </title>
+
 	</head>
 	<body>
 		<div>
